--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="ru.orehovai.testqiwi">
 
+    <uses-permission android:name = "android.permission.INTERNET"/>
+
     <application
+            android:name=".utils.Retrofit"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
